[gd_scene load_steps=5 format=3 uid="uid://ce5ki3augyng5"]

[ext_resource type="Script" path="res://game.gd" id="1_t65i6"]
[ext_resource type="PackedScene" uid="uid://b6l4qi5dx1v7f" path="res://tile.tscn" id="2_v8ues"]
[ext_resource type="Script" path="res://swipe.gd" id="3_y2ax7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bq0ju"]
bg_color = Color(0.682353, 0.682353, 0.682353, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="game" type="Node2D"]
script = ExtResource("1_t65i6")

[node name="Label" type="Label" parent="."]
offset_left = 408.0
offset_top = 48.0
offset_right = 571.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0.756863, 0.776471, 0.8, 1)
theme_override_font_sizes/font_size = 66
text = "3072"

[node name="Score" type="Panel" parent="."]
offset_left = 630.0
offset_top = 48.0
offset_right = 709.0
offset_bottom = 96.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bq0ju")

[node name="Label" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_right = 19.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.603922)
text = "Score"

[node name="Score" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -33.0
offset_right = 29.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BestScore" type="Panel" parent="."]
offset_left = 722.0
offset_top = 48.0
offset_right = 808.0
offset_bottom = 96.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bq0ju")

[node name="Label" type="Label" parent="BestScore"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_right = 19.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.603922)
text = "Best"

[node name="Score" type="Label" parent="BestScore"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -33.0
offset_right = 29.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Button" type="Button" parent="."]
offset_left = 696.0
offset_top = 121.0
offset_right = 808.0
offset_bottom = 152.0
text = "New Game"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 436.0
offset_top = 224.0
offset_right = 939.0
offset_bottom = 615.0
theme_override_constants/h_separation = 106
theme_override_constants/v_separation = 106
columns = 4

[node name="Tile" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile2" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile3" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile4" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile5" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile6" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile7" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile8" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile9" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile10" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile11" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile12" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile13" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile14" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile15" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Tile16" parent="GridContainer" instance=ExtResource("2_v8ues")]
layout_mode = 2

[node name="Camera2D" type="Camera2D" parent="GridContainer"]
position = Vector2(158, 91)
script = ExtResource("3_y2ax7")

[node name="SwipeArea" type="ReferenceRect" parent="."]
offset_left = 362.0
offset_top = 155.0
offset_right = 820.0
offset_bottom = 613.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="swipe_detected" from="GridContainer/Camera2D" to="." method="_on_camera_2d_swipe_detected"]
